--- a/website/src/components/PageContent/PageContent.astro
+++ b/website/src/components/PageContent/PageContent.astro
@@ -1,15 +1,13 @@
 ---
 import type { MarkdownHeading } from 'astro';
-import MoreMenu from '../RightSidebar/MoreMenu.astro';
 import TableOfContents from '../RightSidebar/TableOfContents';
 
 type Props = {
 	title: string;
 	headings: MarkdownHeading[];
-	githubEditUrl: string;
 };
 
-const { title, headings, githubEditUrl } = Astro.props;
+const { title, headings } = Astro.props;
 ---
 
 <article id="article" class="content">
@@ -20,9 +18,6 @@ const { title, headings, githubEditUrl } = Astro.props;
 		</nav>
 		<slot />
 	</section>
-	<nav class="block sm:hidden">
-		<MoreMenu editHref={githubEditUrl} />
-	</nav>
 </article>
 
 <style>
