--- a/website/src/pages/plugin/[...slug].astro
+++ b/website/src/pages/plugin/[...slug].astro
@@ -22,6 +22,10 @@ const rules = Object.entries(plugin.rules ?? {}).map(([key, value]) => ({
   ...value,
 }));
 
+if (!plugin.rules) {
+  console.warn(`No rules found for plugin ${plugin.name}`);
+}
+
 const headings: MarkdownHeading[] = rules.map((rule) => ({
   depth: 2,
   text: rule.name,
@@ -40,7 +44,10 @@ const headings: MarkdownHeading[] = rules.map((rule) => ({
         return (
           <div>
             <div class="flex-grow">
-              <h3 id={rule.name} class="text-lg mb-1 font-semibold font-mono flex items-center gap-4">
+              <h3
+                id={rule.name}
+                class="text-lg mb-1 font-semibold font-mono flex items-center gap-4"
+              >
                 <span>{ruleId}</span>
                 {url ? (
                   <a href={url} class="text-sm hover:underline text-[#7fc87a]">
