docs: upgrade website

--- a/website/src/components/header/header.astro
+++ b/website/src/components/header/header.astro
@@ -1,6 +1,6 @@
 ---
-import SkipToContent from './SkipToContent.astro';
-import SidebarToggle from './SidebarToggle';
+import SkipToContent from './skip-to-content.astro';
+import SidebarToggle from './sidebar-toggle';
 ---
 
 <header>
