--- a/website/src/components/left-sidebar/left-sidebar.astro
+++ b/website/src/components/left-sidebar/left-sidebar.astro
@@ -1,6 +1,6 @@
 ---
-import { getSidebar } from '../../content/_sidebar';
-import SidebarEntry from './SidebarEntry.astro';
+import { getSidebar } from '~/content/_sidebar';
+import SidebarEntry from './sidebar-entry.astro';
 
 type Props = {
   currentPage: string;
