--- a/website/src/components/page-content/page-content.astro
+++ b/website/src/components/page-content/page-content.astro
@@ -1,6 +1,6 @@
 ---
 import type { MarkdownHeading } from 'astro';
-import TableOfContents from '../RightSidebar/TableOfContents';
+import TableOfContents from '~/components/right-sidebar/table-of-contents';
 
 type Props = {
   title: string;
