--- a/website/src/components/head-common.astro
+++ b/website/src/components/head-common.astro
@@ -1,6 +1,6 @@
 ---
-import '../styles/theme.css';
-import '../styles/index.css';
+import '~/styles/theme.css';
+import '~/styles/index.css';
 ---
 
 <!-- Global Metadata -->
