--- a/website/src/components/head-seo.astro
+++ b/website/src/components/head-seo.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import { SITE, OPEN_GRAPH } from '../consts';
+import { SITE, OPEN_GRAPH } from '~/consts';
 
 type Props = { canonicalUrl: URL } & CollectionEntry<'docs'>['data'];
 
@@ -31,10 +31,3 @@ const imageAlt = image?.alt ?? OPEN_GRAPH.image.alt;
 <meta name="twitter:description" content={description ?? SITE.description} />
 <meta name="twitter:image" content={canonicalImageSrc} />
 <meta name="twitter:image:alt" content={imageAlt} />
-
-<!--
-  TODO: Add json+ld data, maybe https://schema.org/APIReference makes sense?
-  Docs: https://developers.google.com/search/docs/advanced/structured-data/intro-structured-data
-  https://www.npmjs.com/package/schema-dts seems like a great resource for implementing this.
-  Even better, there's a React component that integrates with `schema-dts`: https://github.com/google/react-schemaorg
--->
