--- a/website/src/components/left-sidebar/sidebar-entry.astro
+++ b/website/src/components/left-sidebar/sidebar-entry.astro
@@ -1,5 +1,5 @@
 ---
-import type { SidebarEntry } from '../../content/_sidebar';
+import type { SidebarEntry } from '~/content/_sidebar';
 
 type Props = {
   currentPageMatch: string;
