--- a/website/src/pages/preset/[...slug].astro
+++ b/website/src/pages/preset/[...slug].astro
@@ -1,7 +1,7 @@
 ---
-import { BASE_URL } from '../../consts';
-import { Preset, compareRuleKeys, getPresets } from '../../content/_presets';
-import MainLayout from '../../layouts/MainLayout.astro';
+import { BASE_URL } from '~/consts';
+import { Preset, compareRuleKeys, getPresets } from '~/content/_presets';
+import MainLayout from '~/layouts/main-layout.astro';
 import type { MarkdownHeading } from 'astro';
 
 export async function getStaticPaths() {
@@ -61,8 +61,19 @@ const headings: MarkdownHeading[] = [
           <div class="flex-grow">
             <h3 id={rule.name} class="text-lg mb-1 font-semibold font-mono flex items-center gap-4">
               <span>{rule.name}</span>
-              <a href={url} class="text-sm hover:underline text-[#7fc87a]">
-                ref
+              <a href={url} class="flex items-center gap-0.5 flex-row-reverse text-sm hover:underline text-[#dd88c0]">
+                <span>ref</span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20"
+                  class="w-4 h-4 fill-[#c779ad]"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M9.493 2.853a.75.75 0 00-1.486-.205L7.545 6H4.198a.75.75 0 000 1.5h3.14l-.69 5H3.302a.75.75 0 000 1.5h3.14l-.435 3.148a.75.75 0 001.486.205L7.955 14h2.986l-.434 3.148a.75.75 0 001.486.205L12.456 14h3.346a.75.75 0 000-1.5h-3.14l.69-5h3.346a.75.75 0 000-1.5h-3.14l.435-3.147a.75.75 0 00-1.486-.205L12.045 6H9.059l.434-3.147zM8.852 7.5l-.69 5h2.986l.69-5H8.852z"
+                    clip-rule="evenodd"
+                  />
+                </svg>
               </a>
             </h3>
             <p class="text-[--theme-text-light]">{JSON.stringify(rule.value)}</p>
