--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -1,5 +1,18 @@
-<script is:inline>
-	// Redirect your homepage to the first page of documentation.
-	// If you have a landing page, remove this script and add it here!
-	window.location.pathname = `/eslint-config-emperor/introduction`;
-</script>
+---
+import { CollectionEntry, getCollection } from 'astro:content';
+import MainLayout from '~/layouts/main-layout.astro';
+
+const docs = await getCollection('docs');
+const post = docs.find((entry) => entry.id === 'introduction.md');
+type Props = CollectionEntry<'docs'>;
+
+if (!post) {
+  throw new Error('introduction.md not found!');
+}
+
+const { Content, headings } = await post.render();
+---
+
+<MainLayout headings={headings} {...post.data}>
+  <Content />
+</MainLayout>
