docs: escape rule description

--- a/website/src/components/header/skip-to-content.astro
+++ b/website/src/components/header/skip-to-content.astro
@@ -2,7 +2,7 @@
 type Props = {};
 ---
 
-<a href="#article" class="sr-only focus:not-sr-only skiplink"><span>Skip to Content</span></a>
+<a href="#article" class="skiplink sr-only focus:not-sr-only"><span>Skip to Content</span></a>
 
 <style>
 	.skiplink,
