--- a/website/src/pages/preset/[...slug].astro
+++ b/website/src/pages/preset/[...slug].astro
@@ -5,81 +5,84 @@ import MainLayout from '~/layouts/main-layout.astro';
 import type { MarkdownHeading } from 'astro';
 
 export async function getStaticPaths() {
-  const presets = getPresets();
-  return presets.map((preset) => ({
-    params: {
-      slug: preset.slug,
-    },
-    props: preset,
-  }));
+	const presets = getPresets();
+	return presets.map((preset) => ({
+		params: {
+			slug: preset.slug,
+		},
+		props: preset,
+	}));
 }
 type Props = Preset & { name: string };
 
 const preset = Astro.props;
 
 if (!preset.config.rules) {
-  throw new Error(`Preset ${preset.name} has no rules`);
+	throw new Error(`Preset ${preset.name} has no rules`);
 }
 
 const rules = Object.entries(preset.config.rules)
-  .map(([name, value]) => {
-    if (!value) {
-      throw new Error(`Preset ${preset.name} has a malformed rule ${name} with value ${value}`);
-    }
-    return { name, value: Array.isArray(value) ? value : [value] };
-  })
-  .sort((a, b) => compareRuleKeys(a.name, b.name));
+	.map(([name, value]) => {
+		if (!value) {
+			throw new Error(`Preset ${preset.name} has a malformed rule ${name} with value ${value}`);
+		}
+		return { name, value: Array.isArray(value) ? value : [value] };
+	})
+	.sort((a, b) => compareRuleKeys(a.name, b.name));
 
 const headings: MarkdownHeading[] = [
-  {
-    depth: 2,
-    text: 'Config',
-    slug: 'config',
-  },
-  {
-    depth: 2,
-    text: 'Rules',
-    slug: 'rules',
-  },
-  ...rules.map((rule) => ({
-    depth: 3,
-    text: rule.name,
-    slug: rule.name,
-  })),
+	{
+		depth: 2,
+		text: 'Config',
+		slug: 'config',
+	},
+	{
+		depth: 2,
+		text: 'Rules',
+		slug: 'rules',
+	},
+	...rules.map((rule) => ({
+		depth: 3,
+		text: rule.name,
+		slug: rule.name,
+	})),
 ];
 ---
 
 <MainLayout headings={headings} title={preset.name} description={preset.description}>
-  <div class="space-y-7">
-    {
-      rules.map((rule) => {
-        const ruleId = rule.name;
-        const pluginId = ruleId.includes('/') ? ruleId.split('/')[0] : 'eslint';
-        const ruleName = ruleId.includes('/') ? ruleId.split('/')[1] : ruleId;
-        const url = `${BASE_URL}/plugin/${pluginId}#${ruleName}`;
-        return (
-          <div class="flex-grow">
-            <h3 id={rule.name} class="text-lg mb-1 font-semibold font-mono flex items-center gap-4">
-              <span>{rule.name}</span>
-              <a href={url} class="flex items-center gap-0.5 flex-row-reverse text-sm hover:underline text-[#dd88c0]">
-                <span>ref</span>
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 20 20"
-                  class="w-4 h-4 fill-[#c779ad]"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M9.493 2.853a.75.75 0 00-1.486-.205L7.545 6H4.198a.75.75 0 000 1.5h3.14l-.69 5H3.302a.75.75 0 000 1.5h3.14l-.435 3.148a.75.75 0 001.486.205L7.955 14h2.986l-.434 3.148a.75.75 0 001.486.205L12.456 14h3.346a.75.75 0 000-1.5h-3.14l.69-5h3.346a.75.75 0 000-1.5h-3.14l.435-3.147a.75.75 0 00-1.486-.205L12.045 6H9.059l.434-3.147zM8.852 7.5l-.69 5h2.986l.69-5H8.852z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-              </a>
-            </h3>
-            <p class="text-[--theme-text-light]">{JSON.stringify(rule.value)}</p>
-          </div>
-        );
-      })
-    }
-  </div>
+	<div class="space-y-7">
+		{
+			rules.map((rule) => {
+				const ruleId = rule.name;
+				const pluginId = ruleId.includes('/') ? ruleId.split('/')[0] : 'eslint';
+				const ruleName = ruleId.includes('/') ? ruleId.split('/')[1] : ruleId;
+				const url = `${BASE_URL}/plugin/${pluginId}#${ruleName}`;
+				return (
+					<div class="flex-grow">
+						<h3 id={rule.name} class="mb-1 flex items-center gap-4 font-mono text-lg font-semibold">
+							<span>{rule.name}</span>
+							<a
+								href={url}
+								class="flex flex-row-reverse items-center gap-0.5 text-sm text-[#dd88c0] hover:underline"
+							>
+								<span>ref</span>
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									viewBox="0 0 20 20"
+									class="h-4 w-4 fill-[#c779ad]"
+								>
+									<path
+										fill-rule="evenodd"
+										d="M9.493 2.853a.75.75 0 00-1.486-.205L7.545 6H4.198a.75.75 0 000 1.5h3.14l-.69 5H3.302a.75.75 0 000 1.5h3.14l-.435 3.148a.75.75 0 001.486.205L7.955 14h2.986l-.434 3.148a.75.75 0 001.486.205L12.456 14h3.346a.75.75 0 000-1.5h-3.14l.69-5h3.346a.75.75 0 000-1.5h-3.14l.435-3.147a.75.75 0 00-1.486-.205L12.045 6H9.059l.434-3.147zM8.852 7.5l-.69 5h2.986l.69-5H8.852z"
+										clip-rule="evenodd"
+									/>
+								</svg>
+							</a>
+						</h3>
+						<p class="text-[--theme-text-light]">{JSON.stringify(rule.value)}</p>
+					</div>
+				);
+			})
+		}
+	</div>
 </MainLayout>
